--- a/taskpane.css
+++ b/taskpane.css
@@ -226,12 +226,12 @@ input[type="number"]{width:72px}
   text-decoration:none;
   color:#2b2f38;
   cursor: pointer;
+  transition: 0.2s;
 }
 .lang-bar a.active-language{border-color:var(--brand)}
 .lang-bar:hover {
     background: var(--brand);
     color: #fff;
-  
 }
   
 .toggle{display:flex;align-items:center;justify-content:space-between;border:1px solid var(--line);border-radius:10px;padding:10px 12px}
